--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.br.faculdade.caixaeletrinicoandroid">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".MyApp">
         <activity
             android:name=".view.LoginActivity"
             android:label="@string/app_name"
@@ -20,6 +24,9 @@
         </activity>
         <activity
             android:name=".view.MainActivity">
+        </activity>
+        <activity
+            android:name=".view.MovimentacoesActivity">
         </activity>
     </application>
 
